trying to fix spacing3

--- a/styles.css
+++ b/styles.css
@@ -351,7 +351,7 @@ figure,
 p,
 
 fieldset {
-  margin: 0;
+
   padding: 0;
 }
 legend {
